stampForce/src/objects/Event__c.object
<CustomObject>
    <description>A stampforce event container object for which sponsors and stamps are related.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this event active?</description>
        <inlineHelpText>Is this event active?</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>The address this event is happening at</description>
        <inlineHelpText>The address this event is happening at</inlineHelpText>
        <label>Address</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City this event is occurring in</description>
        <inlineHelpText>City this event is occurring in</inlineHelpText>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Stamp_Image__c</fullName>
        <defaultValue>&quot;http://cdn1.iconfinder.com/data/icons/CrystalClear/64x64/apps/package_toys.png&quot;</defaultValue>
        <description>An image to use as the stamp if the sponsor does not have a custom stamp image</description>
        <inlineHelpText>An image to use as the stamp if the sponsor does not have a custom stamp image</inlineHelpText>
        <label>Default Stamp Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>A short description of this event.</description>
        <inlineHelpText>A short description of this event.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Enable_QR_Codes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should sponsors be able to generate QR codes for badges, and should users be able to have their QR codes scanned to get badges?</description>
        <inlineHelpText>Should sponsors be able to generate QR codes for badges, and should users be able to have their QR codes scanned to get badges?</inlineHelpText>
        <label>Enable QR Codes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <description>When does this event end?</description>
        <inlineHelpText>When does this event end?</inlineHelpText>
        <label>End</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Missing_Stamp_Image__c</fullName>
        <defaultValue>&quot;http://icons.mysitemyway.com/wp-content/gallery/simple-red-square-icons-alphanumeric/thumbs/thumbs_128121-simple-red-square-icon-alphanumeric-circled-x.png&quot;</defaultValue>
        <description>The icon to be displayed to a user if they do not have a particular stamp.</description>
        <inlineHelpText>The icon to be displayed to a user if they do not have a particular stamp.</inlineHelpText>
        <label>Missing Stamp Image</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Number_of_Stamps_Available__c</fullName>
        <description>How many stamps are available to get in this event?</description>
        <inlineHelpText>How many stamps are available to get in this event?</inlineHelpText>
        <label>Number of Stamps Available</label>
        <summaryFilterItems>
            <field>Sponsorship__c.Is_Stamp_Provider__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryForeignKey>Sponsorship__c.Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <description>Zip/postal code this event is occurring in.</description>
        <inlineHelpText>Zip/postal code this event is occurring in.</inlineHelpText>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reward_Email_Template_Id__c</fullName>
        <description>The id of the email template to be sent to the user when they have collected all available stamps.</description>
        <inlineHelpText>The id of the email template to be sent to the user when they have collected all available stamps.</inlineHelpText>
        <label>Reward Email Template Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stamp_Acquired_Image__c</fullName>
        <description>Default image used for acquired stamps (if not over written by the sponsor)</description>
        <formula>IMAGE( Default_Stamp_Image__c, &apos;The stamp image provided if a user has a stamp&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Default image used for acquired stamps (if not over written by the sponsor)</inlineHelpText>
        <label>Stamp Acquired Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stamp_Missing_Image__c</fullName>
        <description>Image to be used if a given stamp has not been collected by a user</description>
        <formula>IMAGE( Missing_Stamp_Image__c , &apos;Image to use if stamp is not available&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Image to be used if a given stamp has not been collected by a user</inlineHelpText>
        <label>Stamp Missing Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <description>When does this event start?</description>
        <inlineHelpText>When does this event start?</inlineHelpText>
        <label>Start</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Which state is this event occurring in</description>
        <inlineHelpText>Which state is this event occurring in</inlineHelpText>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>A title for this event to be displayed to users</description>
        <inlineHelpText>A title for this event to be displayed to users</inlineHelpText>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IE0000000Pik8MAC_00NE0000000kZ91MAE</fullName>
        <active>true</active>
        <field>Attendance__c.Event__c</field>
        <filterItems>
            <field>Event__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Attendance_Event</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE0000000PikWMAS_00NE0000000kZ9ZMAU</fullName>
        <active>true</active>
        <field>Sponsorship__c.Event__c</field>
        <filterItems>
            <field>Event__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Sponsorship_Event</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE0000000PikbMAC_00NE0000000kZHdMAM</fullName>
        <active>true</active>
        <field>Stamp__c.Event__c</field>
        <filterItems>
            <field>Event__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Stamp_Event</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE0000000PileMAC_00NE0000000kZKhMAM</fullName>
        <active>true</active>
        <field>Stampforce_Code__c.Event__c</field>
        <filterItems>
            <field>Event__c.Active__c</field>
            <operation>equals</operation>
            <value>true</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Stampforce Code_Event</name>
    </namedFilters>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>